<resources>
    <string name="app_name">Pyylar</string>
    <string name="imagen">descripcion</string>
    <string name="text1">Creado por valentina</string>
    <string name="Validar">validar</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Password</string>
    <string name="registro">Registrarse</string>
    <string name="nombre">nombre</string>
    <string name="correo">correo</string>
    <string name="Tcont">contraseña</string>
    <string name="cancelar">cancelar</string>
    <string name="registrarse">Registrarse</string>
    <string name="Salir">Salir</string>
    <string name="Venta">Nuevo pedido</string>
    <string name="Registro">Registro</string>
    <string name="idalquiler">Item</string>
    <string name="idpersona">ID persona</string>
    <string name="nombres">Descripcion Productos</string>
    <string name="tipo">Unidades</string>
    <string name="Estado">Precio</string>
    <string name="Validar1">Validar</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">INGRESAR</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">Productos</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pinturas y Yesos</string>
    <string name="nav_header_subtitle">0011</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>